MNT: Re-rendered with conda-smithy 3.54.1 and conda-forge-pinning 2026.01.13.21.47.52
Other tools:
- conda-build 25.9.0
- rattler-build 0.48.1
- rattler-build-conda-compat 1.4.9

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,6 @@ source:
 #    - 0001-Trying-this-simple-change.patch
 
 build:
-#  skip: true  # [win]
   number: 1
 
 outputs:
@@ -21,19 +20,20 @@ outputs:
       run_exports:
         - {{ pin_subpackage('nceplibs-g2c', max_pin='x.x.x') }}
     script: build_linux.sh  # [not win]
-    script: build_win.bat  # [win]
+    script: build_win.bat   # [win]
     requirements:
       build:
         - {{ compiler('c') }}
         - {{ stdlib('c') }}     # [not win]
         - cmake >=3.15
-        - pkg-config >=0.21     # [not win]
         - make                  # [not win]
         - ninja                 # [win]
+        - pkg-config >=0.21     # [not win]
+        - pkgconf               # [win]
       host:
         - libpng
         - zlib
-        # list libaec twice to conda-smithy doesn't get confused
+        # list libaec twice so conda-smithy doesn't get confused
         - libaec
         - libaec >=1.0.6
         - openjpeg              # [not win]
@@ -42,9 +42,9 @@ outputs:
     test:
       commands:
         - test -f ${PREFIX}/lib/libg2c${SHLIB_EXT}  # [not win]
-        - test ! -f ${PREFIX}/lib/libg2c.a  # [not win]
-        - if not exist %LIBRARY_BIN%\\g2c.lib exit 1  # [win]
+        - test ! -f ${PREFIX}/lib/libg2c.a          # [not win]
         - if not exist %LIBRARY_BIN%\\g2c.dll exit 1  # [win]
+        - if not exist %LIBRARY_LIB%\\g2c.lib exit 1  # [win]
 
   # old name for the package
   - name: g2clib
@@ -54,10 +54,9 @@ outputs:
     test:
       commands:
         - test -f ${PREFIX}/lib/libg2c${SHLIB_EXT}  # [not win]
-        - test ! -f ${PREFIX}/lib/libg2c.a  # [not win]
+        - test ! -f ${PREFIX}/lib/libg2c.a          # [not win]
         - if not exist %LIBRARY_BIN%\\g2c.dll exit 1  # [win]
-
-  # old name for the package
+        - if not exist %LIBRARY_LIB%\\g2c.lib exit 1  # [win]
 
 about:
   home: https://github.com/NOAA-EMC/NCEPLIBS-g2c
@@ -72,3 +71,4 @@ extra:
     - xylar
     - TimothyCera-NOAA
     - EricEngle-NOAA
+
