MNT: Re-rendered with conda-smithy 3.54.1 and conda-forge-pinning 2026.01.13.21.47.52
Other tools:
- conda-build 25.9.0
- rattler-build 0.48.1
- rattler-build-conda-compat 1.4.9

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: 8520a24c066500cfd0d07a05c6b7b0cb92383d1a4737cf6e79d9f4919c8e79ab
   patches:
      - 0002-msvc-no-vla-g2ccsv.patch  # [win]
+     - 0003-win-no-libgen-g2cindex.patch  # [win]
 #    - 0001-Trying-this-simple-change.patch
 
 build:
